# serve-rs

./: Cargo.toml  README.md  build.rs
deploy/: Dockerfile  README.md  deploy.yml  ingress.yml
proto/: broker.proto  server.proto
src/: bitvavo.rs  brokerimpl.rs  lib.rs  mybroker.rs  topic.rs  topic_command_handler.rs  topiccommandhandler.rs
