[package]
name = "serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.7"
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
futures-core = "0.3.21"
async-stream = "0.3.3"
log = { version = "0.4.16", features = ["kv_unstable"] }
env_logger = "0.9.0"
chrono = "0.4.19"
bytes = "1"

[build-dependencies]
tonic-build = "0.7"
